objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AE Video Gaming</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Meeting%2FProposal</fullName>
        </values>
        <values>
            <fullName>Eligibility</fullName>
        </values>
        <values>
            <fullName>Internal Review</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FHandling Objections</fullName>
        </values>
        <values>
            <fullName>Prepare Sales Strategy</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant Solutions</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application%2FInvoice</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed Application%2FInvoice</fullName>
        </values>
        <values>
            <fullName>Installation%2FOnboarding</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales %28Default%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Executive Approval</fullName>
        </values>
        <values>
            <fullName>Location Assessment</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accel_Employee_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does an Accel employee have ownership in this location?</inlineHelpText>
        <label>Accel Employee Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Establishment_Type__c</fullName>
        <formula>TEXT(Account.Location_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Establishment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If yes, who?</inlineHelpText>
        <label>Accel Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Accel_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accel_TUA_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accel TUA Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepted_As__c</fullName>
        <label>Accepted As</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accepted_As</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addendum_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Items_Requested__c</fullName>
        <label>Addendum Items Requested</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addendum_Request_Date__c</fullName>
        <label>Addendum Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Record Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Projected_from_Municipality__c</fullName>
        <formula>Account.MunicipalityLookup__r.HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipal Average Hold Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amusement_Exec_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Video Gaming Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amusement_Types__c</fullName>
        <label>Amusement Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analysis_Location_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In order for the data to be accurate, the locations must be the same type of establishment for which you are requesting a presentation.</inlineHelpText>
        <label>Analysis Location 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Analysis Location 1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analysis_Location_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In order for the data to be accurate, the locations must be the same type of establishment for which you are requesting a presentation.</inlineHelpText>
        <label>Analysis Location 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Analysis Location 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>LicenseApplication__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied_and_Inspected__c</fullName>
        <formula>OR((NOT(ISBLANK(Project_ID_Lookup__r.IGB_Inspection__c))),
(NOT(ISBLANK( Account.IGB_Inspection_Date__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied and Inspected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment_Show_Date__c</fullName>
        <label>Appointment Show Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Vetting_Questionnaire__c</referenceTo>
        <relationshipLabel>Opportunities (Assessment)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assisting_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assisting Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Acreage__c</fullName>
        <label>Available Acreage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_HPD_for_Accel_Locations__c</fullName>
        <description>Account =&gt; Municipality =&gt; Hold Per Day Total =&gt; Avg HPD For Municipality for 12 weeks</description>
        <formula>Account.MunicipalityLookup__r.Accel_Location_Revenue_Avg_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rolls up 3 months of HPD Revenue for all Accounts (Accel Locations)  associated with the Municipality.
(HPD Revenue Total / Total VGT Count) / 90</inlineHelpText>
        <label>Average HPD for Accel Locations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_HPD_for_municipality__c</fullName>
        <description>Account =&gt; Municipality =&gt; Hold Per Day Total =&gt; Avg HPD for Municipality</description>
        <formula>Account.MunicipalityLookup__r.Average_HPD_For_Municipality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rolls up 3 months of HPD Revenue for all Account associated with the Municipality
(HPD Revenue Total / Total VGT Count) / 90</inlineHelpText>
        <label>Average HPD for Municipality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Funds_In__c</fullName>
        <description>Account.HPD_Funds_in_Avg__c = &gt; Hold Per Day Total =&gt;   Hold Per Day Funds In Avg</description>
        <formula>/*Account.HPD_Funds_in_Avg__c*/

 Account.MunicipalityLookup__r.Hold_Per_Day_Total__r.HPD_Municipality_Funds_In_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rolls up 3 months of HPD Funds In for the Municipality 
ie. HPD Funds In total / Total VGT Count) / 90</inlineHelpText>
        <label>Average Monthly Funds In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Gallons__c</fullName>
        <label>Average Monthly Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buildout_Expected_Completion_Date__c</fullName>
        <label>Buildout Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Entity_Gaming_Experience__c</fullName>
        <label>Business Entity Gaming Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gaming_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Campaign_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Only__c</fullName>
        <label>Cash Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Boarded_for_Digital_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Boarded for Digital Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Start__c</fullName>
        <formula>IF(
OR(ISPICKVAL(StageName, &apos;Closed Won&apos;),ISPICKVAL(StageName, &apos;Closed Lost&apos;)), 
CloseDate, Null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Loss_Reason__c</fullName>
        <label>Closed Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Rejected Location</fullName>
                </value>
                <value>
                    <fullName>Opportunity Already Assigned</fullName>
                </value>
                <value>
                    <fullName>Renewed TUA with Current TO</fullName>
                </value>
                <value>
                    <fullName>Current TUA Doesn’t Expire for Years</fullName>
                </value>
                <value>
                    <fullName>Do Not Solicit</fullName>
                </value>
                <value>
                    <fullName>Signed with Competitor</fullName>
                </value>
                <value>
                    <fullName>Happy With Current TO</fullName>
                </value>
                <value>
                    <fullName>Decided Against Gaming</fullName>
                </value>
                <value>
                    <fullName>Went Out of Business</fullName>
                </value>
                <value>
                    <fullName>Sold to New Owners</fullName>
                </value>
                <value>
                    <fullName>No Activity in 30 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Organic - Signed with Competitor</fullName>
                </value>
                <value>
                    <fullName>Signed With Another TO</fullName>
                </value>
                <value>
                    <fullName>Not Sales Qualified</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Happy with Current Provider</fullName>
                </value>
                <value>
                    <fullName>In a Contract</fullName>
                </value>
                <value>
                    <fullName>Went with another company</fullName>
                </value>
                <value>
                    <fullName>Opportunity Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_1__c</fullName>
        <label>Commission $ 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_2__c</fullName>
        <label>Commission $ 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_3__c</fullName>
        <label>Commission $ 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissioned_As_Date__c</fullName>
        <label>Commissioned As Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioned_As_Track_Value_Changes__c</fullName>
        <label>Commissioned As (Track Value Changes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioned_As__c</fullName>
        <label>Commissioned As</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Commissioned_As</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committed_Terminals__c</fullName>
        <label>Committed Terminals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition_Points__c</fullName>
        <label>Competition Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Contract_Expiration_Date__c</fullName>
        <label>Competitor Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Story__c</fullName>
        <description>Why are they switching? What kinds of equipment do they have? Security, How did you come in contact with the location? When did you come in contact?</description>
        <inlineHelpText>Why are they switching? What kinds of equipment do they have? Security, How did you come in contact with the location? When did you come in contact?</inlineHelpText>
        <label>Competitor Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_TO__c</fullName>
        <formula>Account.Competitor_TO__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor TO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_TUA_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor TUA Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Termination_Notice_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Termination Notice Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Termination_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Termination Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Status__c</fullName>
        <label>Corporation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
                <value>
                    <fullName>NA Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>Not in good standing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Per_Entree__c</fullName>
        <label>Cost Per Entree</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Processor__c</fullName>
        <label>Credit Card Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Terminal_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Terminal Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Terminal_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Terminal Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_for_TUA_Commission__c</fullName>
        <label>Credit for TUA Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_for_TUA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Procuring TUA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Credit for TUA)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Acreage__c</fullName>
        <label>Current Acreage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Gaming_Signage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Gaming Signage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Opp_Type_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Opp Type Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Proposed_Product_Notes__c</fullName>
        <inlineHelpText>Please include product recommendations for applicable Opportunity Type.</inlineHelpText>
        <label>Current/Proposed Product Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_With_Competitor_TO__c</fullName>
        <label>Currently With Competitor TO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_With_Competitor__c</fullName>
        <label>Currently With Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_with_Amusement_Operator__c</fullName>
        <label>Currently with Amusement Operator?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Presentation_Duration__c</fullName>
        <formula>IF( 
AND(ISPICKVAL(StageName,&apos;Presentation&apos;), ISNULL(Negotiation_Start_Date__c)), 
TODAY() - Custom_Presentation_Start__c, Negotiation_Start_Date__c - Custom_Presentation_Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presentation Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Presentation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Presentation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Presentation_Notes__c</fullName>
        <label>Presentation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Presentation_Options__c</fullName>
        <label>Additional Presentation Slides</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terminal Operator Pie Chart</fullName>
                </value>
                <value>
                    <fullName>Illinois Sports Betting</fullName>
                </value>
                <value>
                    <fullName>Gaming in Missouri</fullName>
                </value>
                <value>
                    <fullName>Darts</fullName>
                </value>
                <value>
                    <fullName>Dart Leagues</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support</fullName>
                </value>
                <value>
                    <fullName>C-Store and Truck Stop Gaming</fullName>
                </value>
                <value>
                    <fullName>Gaming Revenue</fullName>
                </value>
                <value>
                    <fullName>Corporate_Standard IL</fullName>
                </value>
                <value>
                    <fullName>Corporate_Standard GA</fullName>
                </value>
                <value>
                    <fullName>Corporate_Standard PA</fullName>
                </value>
                <value>
                    <fullName>Corporate_Industry Primer</fullName>
                </value>
                <value>
                    <fullName>Corporate_Licensure</fullName>
                </value>
                <value>
                    <fullName>Corporate_Revenue Optimization</fullName>
                </value>
                <value>
                    <fullName>Accel Quality Partnerships</fullName>
                    <isActive>false</isActive>
                    <label>Accel Quality Partnerships</label>
                </value>
                <value>
                    <fullName>Accel Share Across Segments</fullName>
                    <isActive>false</isActive>
                    <label>Accel Share Across Segments</label>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                    <isActive>false</isActive>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>Data</fullName>
                    <isActive>false</isActive>
                    <label>Data</label>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                    <isActive>false</isActive>
                    <label>Equipment</label>
                </value>
                <value>
                    <fullName>Gaming Area Improvement/Location</fullName>
                    <isActive>false</isActive>
                    <label>Gaming Area Improvement/Location</label>
                </value>
                <value>
                    <fullName>Length of TUA</fullName>
                    <isActive>false</isActive>
                    <label>Length of TUA</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>Opt Out Areas</fullName>
                    <isActive>false</isActive>
                    <label>Opt Out Areas</label>
                </value>
                <value>
                    <fullName>Optimal Payout Percentage</fullName>
                    <isActive>false</isActive>
                    <label>Optimal Payout Percentage</label>
                </value>
                <value>
                    <fullName>Pouring License Assistance</fullName>
                    <isActive>false</isActive>
                    <label>Pouring License Assistance</label>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                    <isActive>false</isActive>
                    <label>Reporting</label>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                    <isActive>false</isActive>
                    <label>Revenue</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <isActive>false</isActive>
                    <label>Service</label>
                </value>
                <value>
                    <fullName>Sports Betting in IL</fullName>
                    <isActive>false</isActive>
                    <label>Sports Betting in IL</label>
                </value>
                <value>
                    <fullName>Testimonials</fullName>
                    <isActive>false</isActive>
                    <label>Testimonials</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Presentation_Start__c</fullName>
        <label>Presentation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Analysis_Report_Only__c</fullName>
        <inlineHelpText>Complete number of Current/Requested VGTs under Negotiation</inlineHelpText>
        <label>Recommend VGT Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Accel_LOI_Signed_Date__c</fullName>
        <label>Date Accel LOI Signed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Accel_LOI_Signed__c</fullName>
        <label>Date Accel LOI Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Agreement_Signed__c</fullName>
        <label>Date Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Second_Vetter_Assigned__c</fullName>
        <label>Date Second Vetter Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>IF(Stage_Name_Text__c = &quot;Closed Won&quot;,
 (CloseDate -  DATEVALUE(CreatedDate) ),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Competitor_Expiration__c</fullName>
        <formula>Competitor_Contract_Expiration_Date__c - today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Competitor Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Describe_surrounding_area_gaming_dynamic__c</fullName>
        <description>Use data group&apos;s gaming report to describe surrounding area gaming dynamics</description>
        <inlineHelpText>Use data group&apos;s gaming report to describe surrounding area gaming dynamics</inlineHelpText>
        <label>Describe surrounding area gaming dynamic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_About_Competitor__c</fullName>
        <label>Details About Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_to_Thoroughfare_miles__c</fullName>
        <label>Distance to Thoroughfare (miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver&apos;s License Signature Matches TUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAR_Account_Calc__c</fullName>
        <label>EAR Account Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligibility_Notes__c</fullName>
        <inlineHelpText>What is necessary to move forward with gaming application? (i.e. liquor license, build out, regulatory).</inlineHelpText>
        <label>Eligibility Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Revenue__c</fullName>
        <formula>Account.EAR_Opp__c


/*IF(Committed_Terminals__c &gt; 0,
IF(ISPICKVAL(LeadSource,&apos;Lead Gen Group&apos;), Estimated_HPD__c * 365 * Committed_Terminals__c * 0.33 * 0.5, Estimated_HPD__c * 365 * Committed_Terminals__c * 0.33),
IF(ISPICKVAL(LeadSource, &apos;Lead Gen Group&apos;), Estimated_HPD__c * 365 * 5 * 0.33 * 0.5, Estimated_HPD__c * 365 * 5 * 0.33)
)*/

/*
IF(Committed_Terminals__c &gt; 0,
IF(ISPICKVAL(LeadSource,&apos;Lead Gen Group&apos;), Estimated_HPD__c * 365 * Committed_Terminals__c * 0.34 * 0.5, Estimated_HPD__c * 365 * Committed_Terminals__c * 0.34),
IF(ISPICKVAL(LeadSource, &apos;Lead Gen Group&apos;), Account.Estimated_Annual_Revenue__c * 0.5, Account.Estimated_Annual_Revenue__c)
)
*/

/*
IF(ISPICKVAL(LeadSource,&apos;Lead Gen Group&apos;), 
Account.Estimated_Annual_Revenue__c  * 0.5 , Account.Estimated_Annual_Revenue__c)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is calculated as follows:
Estimated Annual Revenue = HPD x # of VGTs in this location x 365 x 0.3257</inlineHelpText>
        <label>Estimated Annual  Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>